# rpgxp

./: .gitignore  README.md  TODO.txt  apswtrace.txt  build  db_schema.sql  dbshell  fks.txt  golden.py  index.html  mypy.ini  pyproject.toml  requirements.txt  run  settings.ini  settings.ini.example  sqlshell  typecheck
golden/: __init__.py
notes/: autotile-table.txt  autotiles.txt  generate_autotile_table.py  how-events-work.txt  panoramas-and-fogs.txt
query/: switch_ids.sql  view_switch.sql  view_switches.sql
rpgxp/: MapInfos.py  Tilesets.py  __init__.py  common.py  db.py  db_schema.py  db_schema_v2.py  dserve.py  dump.py  event_command.py  forest.py  generate_classes.py  generate_db_data.py  generate_db_schema.py  generate_site.py  image.py  material.py  parse.py  routes.py  schema.py  schema_v2.py  serve.py  site.py  sql.py  tile.py  util.py
rpgxp/autotile/: format.py  schema.pickle  schema.txt  tile_id_for_config.pickle  variant.py  variant_for_tile_id.pickle
rpgxp/route/: Route.py  routes.py
rpgxp/schema/: Schema.py  rpgxp_schema.py
rpgxp/script/: AutotileMap.rxdata  db_shell.py  foreign_key_report.py  generate_autotile_table.py  generate_map_images.py  parse_autotile_schema.py  run.py  test_marshal_string_encoding.py
rpgxp/site/: dserve.py  generate.py  serve.py  serve_dynamic.py
site/: style.css  switches.html
site/static/: style.css
site/templates/: common_event.j2  common_events.j2  enemies.j2  enemy.j2  (+18 more)
sql/: common_event_ids.sql  enemy_ids.sql  enemy_ids_with_images.sql  get_scripts_for_archive.sql  graphics.sql  map_ids.sql  map_ids_with_images.sql  schema.sql  script_names.sql  switch_ids.sql  tileset_ids.sql  tileset_ids_with_fogs.sql  tileset_ids_with_panoramas.sql  troop_ids.sql  view_common_event.sql  view_common_events.sql  view_enemies.sql  view_enemy.sql  view_enemy_image.sql  view_fog.sql  view_graphic.sql  view_map.sql  view_map_image.sql  view_maps.sql  view_panorama.sql  view_raw_script.sql  view_script.sql  view_scripts.sql  view_switch.sql  view_switches.sql  view_tileset.sql  view_tilesets.sql  view_troop.sql  view_troops.sql  views.sql
tests/: __init__.py  conftest.py  test_forest.py  test_generate_classes.py  test_tile.py
(+5 files in other folders)
